<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".NeedsActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center_horizontal"
        android:text="@string/stats_tab"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/needsMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="56sp" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <Button
            android:id="@+id/toys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toys"
            android:onClick="onClickPlay"/>
        <Button
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:onClick="onClickFeed"/>

        <Button
            android:id="@+id/sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep"
            android:onClick="onClickSleep"/>
        <Button
            android:id="@+id/heal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heal"
            android:onClick="onClickHeal"/>
        <Button
            android:id="@+id/bath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bath"
            android:onClick="onClickBath"/>
        <Button
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

    </GridLayout>
</LinearLayout>