<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfile" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/myProfile"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:hint="@string/getName" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/getEmail" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/emailMe" />
        <!--    android:onClick="onCheckboxClicked"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK" />

    </LinearLayout>
</ScrollView>