<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetActivity" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/petNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/petImage"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/needsMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:textStyle="bold" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3">

        <Button
            android:id="@+id/toys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Play"
            android:onClick="onClickPlay"/>
        <Button
            android:id="@+id/food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Feed"
            android:onClick="onClickFeed"/>

        <Button
            android:id="@+id/sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep"
            android:onClick="onClickSleep"/>
        <Button
            android:id="@+id/heal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heal"
            android:onClick="onClickHeal"/>
        <Button
            android:id="@+id/bath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bath"
            android:onClick="onClickBath"/>
        <Button
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

    </GridLayout>
</LinearLayout>
</ScrollView>