<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity3"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/idForSaving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/petNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="My pet"
                    android:layout_alignParentStart="true"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            <ImageView
                android:id="@+id/petImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/dog"/>
            </LinearLayout>
            <TextView
                android:id="@+id/needsMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:textSize="30dp"
                android:textStyle="bold" />

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context=".PetActivity"
                android:columnCount="3">

                <Button
                    android:id="@+id/toys"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Play"/>
                <Button
                    android:id="@+id/food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Feed"/>

                <Button
                    android:id="@+id/sleep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sleep"/>
                <Button
                    android:id="@+id/heal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heal"/>
                <Button
                    android:id="@+id/bath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bath"/>
                <Button
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"

                    />

            </GridLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                />
        </LinearLayout>

</LinearLayout>