<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPetFragment" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <!--    tools:context=".MyPetFragment" >-->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choosePet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center_horizontal"
            android:text="@string/choosePet"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:columnCount="3">

            <ImageView
                android:id="@+id/pet1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:src="@drawable/dog" />
            <ImageView
                android:id="@+id/pet2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:src="@drawable/kitty" />
            <ImageView
                android:id="@+id/pet3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:src="@drawable/bunny" />



        </GridLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_gravity="center_horizontal">


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="32dp"
                android:text="Dog" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="32dp"
                android:text="Cat" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="32dp"
                android:text="Bunny" />
        </RadioGroup>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/petName" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="OK" />



    </LinearLayout>
</ScrollView>